--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular-timezone-select",
-  "version": "1.0.1",
-  "homepage": "https://github.com/alexcheng1982/angular-timezone-select",
+  "name": "angular-timezone-selector",
+  "version": "1.0.0",
+  "homepage": "https://github.com/mishguruorg/angular-timezone-selector",
   "authors": [
-    "Fu Cheng <alexcheng1982@gmail.com>"
+    "Ashok Fernandez <ashok@mish.guru>"
   ],
-  "description": "Country timezone for AngularJS",
-  "main": "dist/angular-timezone-select.js",
+  "description": "Timezone selector for Angular JS",
+  "main": "dist/angular-timezone-selector.min.js",
   "keywords": [
     "timezone",
     "select"
@@ -21,9 +21,9 @@
   ],
   "dependencies": {
     "angular": "~1.3.8",
-    "select2": "~4.0.0",
     "moment": "~2.10.3",
     "moment-timezone": "~0.4.0",
-    "lodash": "~3.9.3"
+    "lodash": "~3.9.3",
+    "chosen": "~1.4.2"
   }
 }
