--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-timezone-selector",
   "version": "1.0.1",
   "description": "AngularJS timezone select",
-  "main": "dist/angular-timezone-selector.js",
+  "main": "dist/angular-timezone-selector.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/mishguruorg/angular-country-selector/issues"
   },
-  "homepage": "https://github.com/alexcheng1982/angular-timezone-select",
+  "homepage": "https://github.com/mishguruorg/angular-timezone-selector",
   "devDependencies": {
     "lodash": "latest",
     "uglify-js": "latest",
