--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "grunt-string-replace": "~1.0.0",
     "csv": "^0.4.1",
     "csv-load-sync": "0.0.3"
+  },
+  "dependencies": {
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-contrib-less": "^1.0.1"
   }
 }
