--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-timezone-selector",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "homepage": "https://github.com/mishguruorg/angular-timezone-selector",
   "authors": [
     "Ashok Fernandez <ashok@mish.guru>"
@@ -29,5 +29,8 @@
     "lodash": "~3.9.3",
     "chosen": "~1.4.2",
     "bootstrap": "~3.3.4"
+  },
+  "devDependencies": {
+    "jsTimezoneDetect": "latest"
   }
 }
