--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AngularJS timezone selector",
   "main": "dist/angular-timezone-selector.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard ."
   },
   "repository": {
     "type": "git",
@@ -22,18 +22,26 @@
   },
   "homepage": "https://github.com/mishguruorg/angular-timezone-selector",
   "devDependencies": {
-    "lodash": "latest",
-    "uglify-js": "latest",
+    "csv": "^0.4.1",
+    "csv-load-sync": "0.0.3",
     "grunt": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-string-replace": "~1.0.0",
-    "csv": "^0.4.1",
-    "csv-load-sync": "0.0.3"
+    "lodash": "latest",
+    "standard": "^5.3.1",
+    "uglify-js": "latest"
   },
   "dependencies": {
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-less": "^1.0.1"
+  },
+  "standard": {
+    "ignore": [
+      "bower_components/**",
+      "build/**",
+      "dist/**"
+    ]
   }
 }
