--- a/bower.json
+++ b/bower.json
@@ -26,9 +26,12 @@
     "angular": "~1.3.8",
     "moment": "~2.10.3",
     "moment-timezone": "~0.4.0",
-    "lodash": "~3.9.3",
+    "lodash": "4.0.1",
     "chosen": "~1.4.2",
     "bootstrap": "~3.3.4",
     "jstzdetect": "jsTimezoneDetect#~1.0.6"
+  },
+  "resolutions": {
+    "lodash": "4.0.1"
   }
 }
