--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "uglify-js": "latest"
   },
   "dependencies": {
+    "csv-load-sync": "^1.0.0",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.12.3",
