--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-timezone-selector",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "homepage": "https://github.com/mishguruorg/angular-timezone-selector",
   "authors": [
     "Ashok Fernandez <ashok@mish.guru>"
@@ -23,9 +23,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.8",
-    "moment": "~2.10.3",
-    "moment-timezone": "~0.4.0",
+    "angular": "^1.3.8",
+    "moment": "^2.14.1",
+    "moment-timezone": "^0.5.5",
     "lodash": "4.0.1",
     "chosen": "~1.4.2",
     "bootstrap": "~3.3.4",
