--- a/bower.json
+++ b/bower.json
@@ -24,12 +24,12 @@
   ],
   "dependencies": {
     "angular": "~1.3.8",
-    "moment": "~2.10.3",
-    "moment-timezone": "~0.4.0",
     "lodash": "4.0.1",
     "chosen": "~1.4.2",
     "bootstrap": "~3.3.4",
-    "jstzdetect": "jsTimezoneDetect#~1.0.6"
+    "jstzdetect": "jsTimezoneDetect#~1.0.6",
+    "moment": "^2.19.4",
+    "moment-timezone": "^0.5.14"
   },
   "resolutions": {
     "lodash": "4.0.1"
